New PlayerHand and PlayerArea CLI looks